# JobPilot

./: .gitignore  README.md  careem.html  pyproject.toml  test_enum.py  test_react.py  test_react2.py
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
backend/: __init__.py  artifacts.py  conductor.py  config.py  contracts.py  logging_setup.py  main.py  orchestrator.py  retry.py
backend/alarm/: __init__.py  approval.py  notifier.py
backend/api/: routes_button_memory.py  routes_config.py  routes_control.py  routes_runtime.py  routes_stream.py
backend/cover_letter/: __init__.py  assembler.py  compiler.py  detector.py  writer.py
backend/form/: __init__.py  answerer.py  field_answerer.py  field_matcher.py  filler.py  matcher.py  navigator.py  submitter.py
backend/llm/: __init__.py  providers.py  router.py
backend/models/: classifier.py  classifier_feedback.py  encoder.py  generator.py  prompt_registry.py
backend/resume/: __init__.py  assembler.py  ats_scorer.py  builder.py  bullet_picker.py  compiler.py  form_detector.py  tailor.py
backend/scraping/: __init__.py  browser.py  job_list.py  job_page.py
backend/security/: __init__.py  redactor.py
backend/specialists/: __init__.py  (+9 more)
data/: jobpilot.db-shm  jobpilot.db-wal
scripts/: live_monitor.py  portal_sweep.py
tests/: test_application_form_detection.py  test_generic_pagination.py  test_ground_truth_setup.py  test_history_modes.py  test_pipeline_comprehensive.py  test_workable_adapter.py
(+49 files in other folders)
