[project]
name = "jobpilot"
version = "0.1.0"
description = "JobPilot backend and menubar support code."
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "playwright>=1.45",
  "playwright-stealth>=1.0.6",
  "rapidfuzz>=3.9",
  "tenacity>=9.0",
  "trafilatura>=1.12",
  "beautifulsoup4>=4.12",
  "sentence-transformers>=3.0",
  "mlx-lm>=0.18",
  "scikit-learn>=1.5",
  "pymongo>=4.8",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "structlog>=24.2",
  "python-dotenv>=1.0",
  "jinja2>=3.1",
  "pyobjc>=10.3",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "hypothesis>=6.112",
  "TexSoup>=0.3.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
